@@ -1,4 +1,5 @@
 5.0b3 -> 5.0b4:
+    - jbj: permit rpm -q --qf '%{track}\n' --specsrpm foo.spec queries.
     - jbj: fix: supply additional indentation for forced array[1] with --yaml.
 
 5.0b2 -> 5.0b3:
